# loopclosure_detector

./: CMakeLists.txt  README.md  candidate_closures.txt  trajectoryLaser.g2o
src/: alignment_test.cpp  closure_finder.cpp  closure_finder_test.cpp  correct_alignment_test.cpp  database.cpp  database.h  defs.h  display.cpp  display.h  display_test.cpp  distance_map.cpp  distance_map.h  distance_map_correspondence_finder.cpp  distance_map_correspondence_finder.h  p3p_solver.cpp  p3p_solver.h  points_utils.cpp  points_utils.h  solver.cpp  solver.h  utils.cpp  utils.h
